Exercise Two Done

--- a/aboutme.html
+++ b/aboutme.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html>
+    <style>
+        html {background-color: rgb(125, 107, 168);}
+    </style>
     <head>
         <title>
             Mohammad Zeineddine
         </title>
-       <h1> About Mohammad Zeineddine </h1>
-       <p>
-           My name is Mohammad and I am <b>competitve</b>, <b>creative</b> and <b>ambitios</b>.
+       <h1 style="color:brown;"> About Mohammad Zeineddine </h1>
+       <p style="color:rgb(5, 61, 33);font-family:'Times New Roman', Times, serif;">
+           My name is Mohammad and I am <b>competitive</b>, <b>creative</b> and <b>ambitios</b>.
        </p>
        <hr>
     </head>
     <body>
+        <style>
+            h2 {color:rgb(95, 10, 10);}
+            li {color:rgb(11, 11, 100);font-family: Arial, Helvetica, sans-serif;}
+        </style>
         <h2>
             My Class This Semester
         </h2>
