--- a/aboutme.html
+++ b/aboutme.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html>
-    <style>
-        html {background-color: rgb(125, 107, 168);}
-    </style>
+<html lang="en" style="background-color:rgb(125, 107, 168);">
     <head>
+        
+<meta charset="UTF-8">
         <title>
             Mohammad Zeineddine
         </title>
@@ -11,13 +10,13 @@
        <p style="color:rgb(5, 61, 33);font-family:'Times New Roman', Times, serif;">
            My name is Mohammad and I am <b>competitive</b>, <b>creative</b> and <b>ambitios</b>.
        </p>
-       <hr>
     </head>
     <body>
         <style>
             h2 {color:rgb(95, 10, 10);}
             li {color:rgb(11, 11, 100);font-family: Arial, Helvetica, sans-serif;}
         </style>
+        <hr>
         <h2>
             My Class This Semester
         </h2>
