Exercise 5 is done

--- a/aboutme.html
+++ b/aboutme.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" style="background-color:rgb(125, 107, 168);">
     <head>
-        
-<meta charset="UTF-8">
+        <style>
+            p::first-letter{
+                float:inline-start;
+                line-height: 35px;
+                font-size: 35px;
+                font-family: Montserrat;
+            }
+        </style>
+        <meta charset="UTF-8">
         <title>
             Mohammad Zeineddine
         </title>
@@ -15,8 +22,10 @@
         <style>
             h2 {color:rgb(95, 10, 10);}
             li {color:rgb(11, 11, 100);font-family: Arial, Helvetica, sans-serif;}
+            a {color:yellowgreen; text-decoration: none;}
+            a:hover {text-decoration: underline;}
         </style>
-        <hr>
+        <hr style="border-color:black;">
         <h2>
             My Class This Semester
         </h2>
@@ -31,9 +40,9 @@
             My Favourite Movies
         </h2>
         <ol>
-            <li>The Imitation Game</li>
-            <li>Interstellar</li>
-            <li>The Matrix</li>
+            <li>The Imitation Game <a href ="https://www.imdb.com/title/tt2084970/" target="_blank;" > (IMDB) </a></li>
+            <li>Interstellar <a href ="https://www.imdb.com/title/tt0816692/" target="_blank;" > (IMDB) </a></li>
+            <li>The Matrix <a href ="https://www.imdb.com/title/tt0133093/" target="_blank;" > (IMDB) </a></li>
         </ol>
         <h2>
             My Moods
