Exercise 6 is done

--- a/aboutme.html
+++ b/aboutme.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="background-color:rgb(125, 107, 168);">
+<html lang="en" style="background-color:rgb(140, 121, 187);">
     <head>
         <style>
             p::first-letter{
@@ -24,6 +24,8 @@
             li {color:rgb(11, 11, 100);font-family: Arial, Helvetica, sans-serif;}
             a {color:yellowgreen; text-decoration: none;}
             a:hover {text-decoration: underline;}
+            dt {font-style:oblique; color:rgb(187, 13, 71)}
+            dd {font-style:italic; color:rgb(129, 13, 123)}
         </style>
         <hr style="border-color:black;">
         <h2>
@@ -41,8 +43,28 @@
         </h2>
         <ol>
             <li>The Imitation Game <a href ="https://www.imdb.com/title/tt2084970/" target="_blank;" > (IMDB) </a></li>
+            <dl>
+                <dt>Director</dt>
+                <dd>Morten Tyldum</dd>
+                <dt>Writers</dt>
+                <dd>Graham Moore-Andrew Hodges</dd>
+                <dt>Book</dt>
+                <dd>Alan Turing: The Enigma</dd>
+              </dl>
             <li>Interstellar <a href ="https://www.imdb.com/title/tt0816692/" target="_blank;" > (IMDB) </a></li>
+            <dl>
+                <dt>Director</dt>
+                <dd>Christopher Nolan</dd>
+                <dt>Writers</dt>
+                <dd>Jonathan Nolan-Christopher Nolan</dd>
+              </dl>
             <li>The Matrix <a href ="https://www.imdb.com/title/tt0133093/" target="_blank;" > (IMDB) </a></li>
+            <dl>
+                <dt>Directors</dt>
+                <dd>Lana Wachowski-Lilly Wachowski</dd>
+                <dt>Writers</dt>
+                <dd>Lilly Wachowski-Lana Wachowski</dd>
+              </dl>
         </ol>
         <h2>
             My Moods
